Resolve horizontal overflow on derive.at start page

--- a/derive.at/static/styles.css
+++ b/derive.at/static/styles.css
@@ -66,9 +66,9 @@ body {
     color: var(--fg-2);
     display: flex;
     flex-direction: column;
-/*    font-size: 20px;*/
     margin: 0;
     min-height: 100dvh;
+    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 a {
